# HKMC_CAN2UART

./: Doxyfile  README.md
main_program/: CMakeLists.txt  Kconfig  nrf52840dk_nrf52840.overlay  prj.conf
main_program/build_nrf52840dk_nrf52840/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  main_program.emProject  main_program.emSession  partitions.yml  pm.config
main_program/build_nrf52840dk_nrf52840/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
main_program/build_nrf52840dk_nrf52840/mcuboot/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  (+11 more)
main_program/build_nrf52840dk_nrf52840/zephyr/: .cmake.dotconfig.checksum  .config  app_moved_test_update.hex  app_signed.hex  app_test_update.hex  cmake_install.cmake  dev_handles.c  dfu_application.zip_manifest.json  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  mcuboot_primary_app.hex  merged.hex  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.map  zephyr_pre1.map
main_program/child_image/: mcuboot.conf
main_program/src/: config.h  function.h  hw_test.c  init_res.c  main.c  thread_bluetooth.c  thread_canbus.c  thread_display.c  thread_usb.c
(+129 files in other folders)
